fix: 🐛  Removes mobile overflow

--- a/app/static/reset.css
+++ b/app/static/reset.css
@@ -1,8 +1,15 @@
-*, *::before, *::after {
-    box-sizing: border-box;
+body, html {
+	max-width: 100vw;
+	overflow-x: hidden;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
 * {
-  position: relative;
-  margin: 0;
+	position: relative;
+	margin: 0;
 }
